Fix countdown unaligned

--- a/src/styles/sections/hero.scss
+++ b/src/styles/sections/hero.scss
@@ -475,6 +475,7 @@ $countdown-width: $screen-left-width/8;
           font-weight: bold;
           will-change: contents;
           line-height: 1;
+          text-align: center;
         }
 
         .countdown__label {
